TabletServiceImpl update with Comparator, TabletServiceTest updated